unpackaged/main/default/objects/Marketing_Community__c/Marketing_Community__c.object-meta.xml
<CustomObject>
    <description>SiteCore/CMS "marketing community"</description>
    <label>Marketing Community</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>