unpackaged/main/default/objects/Marketing_Community__c/fields/Active__c.field-meta.xml
<CustomField>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this Community be included in reports?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>