unpackaged/main/default/objects/Marketing_Community__c/fields/Assigned_Queue__c.field-meta.xml
<CustomField>
        <fullName>Assigned_Queue__c</fullName>
        <label>Assigned Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Toronto_Pathways</fullName>
                </value>
                <value>
                    <fullName>Toronto_Pinehurst</fullName>
                </value>
                <value>
                    <fullName>Toronto_Woodhaven</fullName>
                </value>
                <value>
                    <fullName>DC_Avendale</fullName>
                </value>
                <value>
                    <fullName>DC_Admirals_Square</fullName>
                </value>
                <value>
                    <fullName>DC_Bradford_s_Landing</fullName>
                </value>
                <value>
                    <fullName>DC_Easton_Village</fullName>
                </value>
                <value>
                    <fullName>DC_Heritage_Shores</fullName>
                </value>
                <value>
                    <fullName>DC_Liberty</fullName>
                </value>
                <value>
                    <fullName>DC_Mayfair</fullName>
                </value>
                <value>
                    <fullName>DC_Oakview_Village</fullName>
                </value>
                <value>
                    <fullName>DC_Potomac_Shores</fullName>
                </value>
                <value>
                    <fullName>DC_Ridgeview</fullName>
                </value>
                <value>
                    <fullName>DC_Bluffs_at_Sleeter_Lake</fullName>
                </value>
                <value>
                    <fullName>DC_Snowden_Bridge_Single_Family</fullName>
                </value>
                <value>
                    <fullName>DC_Snowden_Bridge_Townhomes</fullName>
                </value>
                <value>
                    <fullName>DC_Travilah_Station</fullName>
                </value>
                <value>
                    <fullName>DC_Waterford_Manor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>