unpackaged/main/default/objects/Marketing_Community__c/fields/City__c.field-meta.xml
<CustomField>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </CustomField>