unpackaged/main/default/objects/Marketing_Community__c/fields/Sales_office__c.field-meta.xml
<CustomField>
        <fullName>Sales_office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Marketing Communities</relationshipLabel>
        <relationshipName>Marketing_Communities</relationshipName>
        <type>Lookup</type>
    </CustomField>