unpackaged/main/default/objects/Marketing_Community__c/fields/Sales_Process_Type__c.field-meta.xml
<CustomField>
        <fullName>Sales_Process_Type__c</fullName>
        <defaultValue>'Direct offer'</defaultValue>
        <label>Default Sales Process Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct offer</fullName>
                </value>
                <value>
                    <fullName>Lot reservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>