unpackaged/main/default/objects/Marketing_Community__c/fields/Sales_Status__c.field-meta.xml
<CustomField>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Available</fullName>
                    <default>true</default>
                    <label>Not Yet Available</label>
                </value>
                <value>
                    <fullName>Coming Soon</fullName>
                </value>
                <value>
                    <fullName>Grand Opening</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>