unpackaged/main/default/objects/Marketing_Community__c/fields/SiteCoreID__c.field-meta.xml
<CustomField>
        <fullName>SiteCoreID__c</fullName>
        <externalId>true</externalId>
        <label>SiteCoreID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>