unpackaged/main/default/objects/Marketing_Community__c/fields/Web_Link__c.field-meta.xml
<CustomField>
        <fullName>Web_Link__c</fullName>
        <label>Web Link</label>
        <type>Url</type>
    </CustomField>