unpackaged/main/default/objects/Marketing_Community__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </CustomField>