unpackaged/main/default/objects/Marketing_Community__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Process_Type__c</columns>
        <columns>Sales_office__c</columns>
        <columns>SiteCoreID__c</columns>
        <columns>Assigned_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>